modificado infos das rotas na documentação, refatorado banco de dados para levar em conta SaveFiles em vez de Player
